Youtube-Home-Page

--- a/style.css
+++ b/style.css
@@ -4,18 +4,21 @@
   background-color: black;
 }
 .nav {
-  background-color: black;
+  height: 56px;
+  padding: 0 16px;
   color: white;
+  display: flexbox;
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 }
 
 .nav-left {
   display: flex; /* put icon and logo in a row */
   align-items: center; /* center vertically in the row */
   gap: 10px;
+  margin-left: 15px;
 }
 
 img {
@@ -23,6 +26,7 @@ img {
   height: 56px;
 }
 .nav-search {
+  margin-left: 150px;
   display: flex;
   width: 550px;
   align-items: center;
@@ -42,9 +46,11 @@ img {
 }
 .btn-search {
   background-color: #222222;
-  border-radius: 100%;
-  border: 0.05px solid white;
+  border-radius: 0px 50px 50px 0px;
+  border: 1px solid hsl(0, 0%, 18.82%);
   cursor: pointer;
+  margin-left: -201px;
+  border-width: 3px;
   padding: 8px 12px;
   font-size: 14px;
   color: white;
@@ -53,7 +59,8 @@ img {
 .btn-mic {
   background-color: #272727;
   border: none;
-  border-radius: 28%;
+  margin-left: -150px; ;
+  border-radius: 100%;
   cursor: pointer;
   padding: 8px 12px;
   font-size: 14px;
@@ -62,31 +69,47 @@ img {
 }
 .nav-right {
   display: flex;
-  justify-content: center;
+  gap: 20px;
+  justify-content: space-between;
   align-items: center;
 }
-.btn-plus {
-  margin-right: 5px;
+
+.text {
+  background-color: transparent;
+  border: none;
+  padding: 3px 7px 4px 3px;
+  font-weight: 100;
+  font-size: 15px;
+}
+
+#plus {
+  background-color: transparent;
+  font-weight: 300;
+  color: #fff;
+  padding: 1px 2px 3px 4px;
+  font-size: 15px;
+
 }
 .btn-plus {
   display: flex;
+  background-color: hsl(0, 0%, 18.82%);;
   align-items: center;
   justify-content: center;
-  border: 1px solid white;
-  border-radius: 50%;
+  border: none;
+  border-radius: 25px;
   padding: 5px;
   gap: 5px;
+  margin-right: 5px;
 }
 .bell-icon {
   background-color: black;
   border: none;
   color: white;
-  gap: 5px;
+  gap: 8px;
 }
 .profile {
-  width: 28px;
-  height: 20px;
-  border-radius: 100%;
+  width: 30px;
+  height: 30px;
   border-radius: 100%;
   background-color: white;
 }
